// Copyright 2024 Flant JSC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "pb/dhctl";

package dhctl;

import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "common.proto";

message CommanderDetachRequest {
  oneof message {
    CommanderDetachStart start = 1;
  }
}

message CommanderDetachResponse {
  oneof message {
    CommanderDetachResult result = 1;
    Logs logs = 2;
  }
}

message CommanderDetachStart {
  string connection_config = 1;
  string cluster_config = 2;
  string provider_specific_cluster_config = 3;
  string state = 4;
  string create_resources_template = 5;
  string delete_resources_template = 6;
  google.protobuf.Struct create_resources_values = 7;
  google.protobuf.Struct delete_resources_values = 8;
  CommanderDetachStartOptions options = 9;
}

message CommanderDetachStartOptions {
  bool commander_mode = 1;
  string commander_uuid = 2;
  int32 log_width = 3;
  google.protobuf.Duration resources_timeout = 4;
  google.protobuf.Duration deckhouse_timeout = 5;
  OperationOptions common_options = 10;
}

message CommanderDetachResult {
  string state = 1;
  string err = 2;
}
